--- a/Reference/template/events.html
+++ b/Reference/template/events.html
@@ -149,9 +149,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">NLP WORHSHOP</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">3 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item border-bottom">
@@ -164,9 +162,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">SOFT SKILLS</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">2 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item border-bottom">
@@ -179,9 +175,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">MACHINE LEARNING WORKSHOP</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">5 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item border-bottom">
@@ -194,9 +188,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">GENERATIVE AI</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">3 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item">
@@ -209,9 +201,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">UI Design</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">5 DAYS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                     </div>
@@ -240,9 +230,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">NLP WORHSHOP</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">3 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item border-bottom">
@@ -255,9 +243,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">SOFT SKILLS</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">2 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item border-bottom">
@@ -270,9 +256,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">MACHINE LEARNING WORKSHOP</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">5 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item border-bottom">
@@ -285,9 +269,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">GENERATIVE AI</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">3 WEEKS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                       <div class="preview-item">
@@ -300,9 +282,7 @@
                           <div class="flex-grow">
                             <h6 class="preview-subject">UI Design</h6>
                           </div>
-                          <div class="mr-auto text-sm-right pt-2 pt-sm-0">
-                            <p class="text-muted">5 DAYS</p>
-                          </div>
+                          <div class="badge badge-outline-success">Register</div>
                         </div>
                       </div>
                     </div>
