--- a/Reference/template/faqs.html
+++ b/Reference/template/faqs.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="assets/vendors/owl-carousel-2/owl.theme.default.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -105,9 +106,32 @@
                 </li>
             </ul>
         </nav>
-        <div class="wrapper">
-            <p>The Begninning of a New Asset class</p>
-            <h1>FFrequently Asked Questions</h1>
+        <div class="container-fluid page-body-wrapper">
+            <nav class="navbar p-0 fixed-top d-flex flex-row">
+              <div class="navbar-brand-wrapper d-flex d-lg-none align-items-center justify-content-center">
+                <a class="navbar-brand brand-logo-mini" href="index.html"><img src="assets/images/logo-mini.svg"
+                    alt="logo" /></a>
+              </div>
+              <div class="navbar-menu-wrapper flex-grow d-flex align-items-stretch">
+                <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
+                  <span class="mdi mdi-menu"></span>
+                </button>
+                <ul class="navbar-nav w-100">
+                  <li class="nav-item w-100">
+                    <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
+                      <input type="text" class="form-control" placeholder="Search products">
+                    </form>
+                  </li>
+                  <li class="nav-item dropdown d-none d-lg-block">
+                    <a class="nav-link btn btn-success create-new-button" id="createbuttonDropdown" data-toggle="dropdown"
+                      aria-expanded="false" href="#">+ Choose Project</a>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+            <div class="main-panel">
+                <div class="content-wrapper">
+            <h1>Frequently Asked Questions</h1>
     
             <div class="faq">
                 <button class="accordion">
@@ -197,7 +221,7 @@
                 </div>
             </div>
         </div>
-    
+    </div>
         <script>
             var acc = document.getElementsByClassName("accordion");
             var i;
